# cardforge

./: .dockerignore  .env.example  .gitignore  README.md
.github/workflows/: ci.yml  docker-publish.yml
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py  settings.py
backend/app/api/: cards.py  health.py  lorebook.py  proxy.py  quack.py
backend/app/core/: __init__.py  ai_client.py  api_models.py  card_export.py  card_import.py  card_models.py  exceptions.py  png_chunks.py  quack_client.py  quack_mapper.py  security.py  token_estimator.py  v2_to_v3.py
backend/app/middleware/: exception_handlers.py  rate_limit.py
backend/tests/: conftest.py  test_ai_client.py  test_api_cards.py  test_card_export.py  test_card_import.py  test_card_models.py  test_health.py  test_lorebook_api.py  test_m1_acceptance.py  test_png_chunks.py  test_proxy_api.py  test_quack_api.py  test_quack_client.py  test_quack_mapper.py  test_rate_limit.py  test_security.py  test_token_estimator.py  test_v2_to_v3.py
backend/tests/fixtures/: generate_png_fixtures.py
backend/tests/fixtures/golden_files/: README.md  quack_export.json  quack_lorebook.json  v2_standard.json  v3_standard.json  xss_attack_sample.json
docker/: .env.production  Dockerfile  docker-compose.yml
docs/: API.md  DEPLOYMENT.md  QUICKSTART.md  USER_GUIDE.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
frontend/src/: api.js  main.js  store.js
frontend/src/components/: ai_client.js  ai_field_trigger.js  array_editor.js  assets_editor.js  modal.js  (+15 more)
(+4 files in other folders)
